--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
                         .catch(err => console.error('Error getting profile:', err));
                 }
             })
-            .catch(err => console.error('LIFF Initialization failed:', err));
+            .catch(err => {
+                console.error('LIFF Initialization failed:', err);
+                alert('LIFFの初期化に失敗しました。');
+            });
         }
 
         function sendMessage() {
@@ -42,7 +45,7 @@
                 })
                 .catch((err) => {
                     console.error('メッセージ送信失敗:', err);
-                    alert('メッセージ送信に失敗しました。');
+                    alert('メッセージ送信に失敗しました。エラーメッセージ: ' + JSON.stringify(err));
                 });
             } else {
                 alert('LIFFアプリの外部ではメッセージを送信できません');
