--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             })
             .catch(err => {
                 console.error('LIFF Initialization failed:', err);
-                alert('LIFFの初期化に失敗しました。');
+                alert('LIFFの初期化に失敗しました。エラーメッセージ: ' + JSON.stringify(err));
             });
         }
 
