--- a/index.html
+++ b/index.html
@@ -3,65 +3,168 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LIFF App</title>
-    <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
-    <script>
-        function initializeLiff() {
-            liff.init({
-                liffId: "2004727608-aZejr9x5" // ここにあなたのLIFF IDを入力します
-            })
-            .then(() => {
-                if (!liff.isLoggedIn()) {
-                    liff.login();
-                } else {
-                    liff.getProfile()
-                        .then(profile => {
-                            document.getElementById('userId').textContent = profile.userId;
-                            document.getElementById('displayName').textContent = profile.displayName;
-                        })
-                        .catch(err => console.error('Error getting profile:', err));
-                }
-            })
-            .catch(err => {
-                console.error('LIFF Initialization failed:', err);
-                alert('LIFFの初期化に失敗しました。エラーメッセージ: ' + JSON.stringify(err));
-            });
+    <title>予約フォーム</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f7f7f7;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
         }
-
-        function sendMessage() {
-            const message = document.getElementById('message').value;
-            if (message.trim() === "") {
-                alert("メッセージを入力してください。");
-                return;
-            }
-
-            if (liff.isInClient()) {
-                liff.sendMessages([{
-                    type: 'text',
-                    text: message
-                }])
-                .then(() => {
-                    alert('メッセージが送信されました');
-                })
-                .catch((err) => {
-                    console.error('メッセージ送信失敗:', err);
-                    alert('メッセージ送信に失敗しました。エラーメッセージ: ' + JSON.stringify(err));
-                });
-            } else {
-                alert('LIFFアプリの外部ではメッセージを送信できません');
-            }
+        .container {
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 90%;
+            max-width: 500px;
+            padding: 20px;
+            box-sizing: border-box;
         }
-
-        window.onload = function() {
-            initializeLiff();
-        };
-    </script>
+        h1 {
+            text-align: center;
+            margin-bottom: 20px;
+            font-size: 24px;
+        }
+        label {
+            display: block;
+            margin-bottom: 10px;
+            font-weight: bold;
+        }
+        input[type="text"], input[type="tel"], textarea {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 20px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+        .visit-buttons, .symptoms {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            margin-bottom: 20px;
+        }
+        .visit-buttons button, .symptoms button {
+            flex: 1;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            background-color: #f7f7f7;
+            cursor: pointer;
+            box-sizing: border-box;
+        }
+        .visit-buttons button.active, .symptoms button.active {
+            background-color: #444;
+            color: #fff;
+        }
+        .date-inputs input[type="datetime-local"] {
+            width: calc(100% - 22px);
+            padding: 10px;
+            margin-bottom: 20px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+        .submit-button {
+            width: 100%;
+            padding: 15px;
+            border: none;
+            border-radius: 4px;
+            background-color: #ff4c4c;
+            color: #fff;
+            font-size: 18px;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
-    <h1>LIFF App</h1>
-    <p>ユーザーID: <span id="userId"></span></p>
-    <p>表示名: <span id="displayName"></span></p>
-    <textarea id="message" placeholder="ここにメッセージを入力"></textarea>
-    <button onclick="sendMessage()">送信</button>
+    <div class="container">
+        <h1>予約フォーム</h1>
+        <label for="name">お客様名（カタカナ）</label>
+        <input type="text" id="name" placeholder="お名前を入力してください">
+
+        <label for="phone">電話番号</label>
+        <input type="tel" id="phone" placeholder="電話番号を入力してください">
+
+        <label>ご来店回数</label>
+        <div class="visit-buttons">
+            <button type="button" id="firstVisit" onclick="selectVisit(this)">初めて</button>
+            <button type="button" id="repeatVisit" onclick="selectVisit(this)">2回目以降</button>
+        </div>
+
+        <label>症状</label>
+        <div class="symptoms">
+            <button type="button" onclick="selectSymptom(this)">頭痛・偏頭痛</button>
+            <button type="button" onclick="selectSymptom(this)">交通事故施術</button>
+            <button type="button" onclick="selectSymptom(this)">肩こり・腕のしびれ</button>
+            <button type="button" onclick="selectSymptom(this)">臀部・下肢の痛みや痒れ</button>
+            <button type="button" onclick="selectSymptom(this)">ぎっくり腰・慢性腰痛</button>
+            <button type="button" onclick="selectSymptom(this)">寝違い・むち打ち等首の症状</button>
+            <button type="button" onclick="selectSymptom(this)">EMS(電気的筋肉刺激装置)トレーニング</button>
+            <button type="button" onclick="selectSymptom(this)">健康保険の施術</button>
+            <button type="button" onclick="selectSymptom(this)">その他</button>
+        </div>
+
+        <label for="date1">第1希望日</label>
+        <input type="datetime-local" id="date1">
+
+        <label for="date2">第2希望日</label>
+        <input type="datetime-local" id="date2">
+
+        <label for="date3">第3希望日</label>
+        <input type="datetime-local" id="date3">
+
+        <label for="message">メッセージ（質問等お気軽にご記入ください）</label>
+        <textarea id="message" rows="4" placeholder="メッセージを入力してください"></textarea>
+
+        <button class="submit-button" onclick="submitForm()">予約を行う</button>
+    </div>
+
+    <script>
+        let visitCount = '';
+        let symptoms = [];
+
+        function selectVisit(element) {
+            document.getElementById('firstVisit').classList.remove('active');
+            document.getElementById('repeatVisit').classList.remove('active');
+            element.classList.add('active');
+            visitCount = element.innerText;
+        }
+
+        function selectSymptom(element) {
+            element.classList.toggle('active');
+            const symptom = element.innerText;
+            if (symptoms.includes(symptom)) {
+                symptoms = symptoms.filter(s => s !== symptom);
+            } else {
+                symptoms.push(symptom);
+            }
+        }
+
+        function submitForm() {
+            const name = document.getElementById('name').value;
+            const phone = document.getElementById('phone').value;
+            const date1 = document.getElementById('date1').value;
+            const date2 = document.getElementById('date2').value;
+            const date3 = document.getElementById('date3').value;
+            const message = document.getElementById('message').value;
+
+            const formData = {
+                name,
+                phone,
+                visitCount,
+                symptoms,
+                dates: [date1, date2, date3],
+                message
+            };
+
+            // Simulating sending data to LINE LIFF
+            alert('予約が送信されました: ' + JSON.stringify(formData));
+            // Here you would send formData to your server or LIFF ID
+        }
+    </script>
 </body>
 </html>
