--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
             align-items: center;
             height: 100vh;
             margin: 0;
+            padding: 0 10px; /* 追加: 左右にパディングを追加 */
         }
         .container {
             background-color: #fff;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 90%;
+            width: 100%;
             max-width: 500px;
             padding: 20px;
             box-sizing: border-box;
@@ -83,6 +84,10 @@
 <body>
     <div class="container">
         <h1>予約フォーム</h1>
+        
+        <!-- 空白の行を追加 -->
+        <div style="margin-top: 10px;"></div>
+
         <label for="name">お客様名（カタカナ）</label>
         <input type="text" id="name" placeholder="お名前を入力してください">
 
@@ -131,7 +136,7 @@
         // LIFF初期化
         document.addEventListener('DOMContentLoaded', function() {
             liff.init({
-                liffId: '2005254357-zKma9BZk' // ここにあなたのLIFF IDを入力
+                liffId: '2004727608-aZejr9x5' // ここにあなたのLIFF IDを入力
             }).then(() => {
                 // LIFF初期化成功時の処理
                 console.log('LIFF初期化成功');
