--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
             background-color: #f7f7f7;
             display: flex;
             justify-content: center;
-            align-items: center;
+            align-items: flex-start;
             height: 100vh;
             margin: 0;
+            padding-top: 20px; /* ページのトップに空白を作る */
         }
         .container {
             background-color: #fff;
