--- a/index.html
+++ b/index.html
@@ -86,19 +86,19 @@
 <body>
     <div class="container">
         <h1>予約フォーム</h1>
-        <label for="name">お客様名（カタカナ）</label>
+        <label for="name">お客様名※必須</label>
         <input type="text" id="name" placeholder="お名前を入力してください">
 
-        <label for="phone">電話番号</label>
+        <label for="phone">電話番号※必須</label>
         <input type="tel" id="phone" placeholder="電話番号を入力してください">
 
-        <label>ご来店回数</label>
+        <label>ご来店回数※必須</label>
         <div class="visit-buttons">
             <button type="button" id="firstVisit" onclick="selectVisit(this)">初めて</button>
             <button type="button" id="repeatVisit" onclick="selectVisit(this)">2回目以降</button>
         </div>
 
-        <label>症状</label>
+        <label>症状※必須</label>
         <div class="symptoms">
             <button type="button" onclick="selectSymptom(this)">頭痛・偏頭痛</button>
             <button type="button" onclick="selectSymptom(this)">交通事故施術</button>
@@ -111,7 +111,7 @@
             <button type="button" onclick="selectSymptom(this)">その他</button>
         </div>
 
-        <label for="date1">第1希望日</label>
+        <label for="date1">第1希望日※必須</label>
         <input type="datetime-local" id="date1">
 
         <label for="date2">第2希望日</label>
