--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>予約フォーム</title>
+    <title>占いフォーム</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -86,39 +86,11 @@
 <body>
     <div class="container">
         <h1>予約フォーム</h1>
-        <label for="name">お客様名（カタカナ）</label>
+        <label for="name">お客様名※必須</label>
         <input type="text" id="name" placeholder="お名前を入力してください">
 
-        <label for="phone">電話番号</label>
-        <input type="tel" id="phone" placeholder="電話番号を入力してください">
-
-        <label>ご来店回数</label>
-        <div class="visit-buttons">
-            <button type="button" id="firstVisit" onclick="selectVisit(this)">初めて</button>
-            <button type="button" id="repeatVisit" onclick="selectVisit(this)">2回目以降</button>
-        </div>
-
-        <label>症状</label>
-        <div class="symptoms">
-            <button type="button" onclick="selectSymptom(this)">頭痛・偏頭痛</button>
-            <button type="button" onclick="selectSymptom(this)">交通事故施術</button>
-            <button type="button" onclick="selectSymptom(this)">肩こり・腕のしびれ</button>
-            <button type="button" onclick="selectSymptom(this)">臀部・下肢の痛みや痒れ</button>
-            <button type="button" onclick="selectSymptom(this)">ぎっくり腰・慢性腰痛</button>
-            <button type="button" onclick="selectSymptom(this)">寝違い・むち打ち等首の症状</button>
-            <button type="button" onclick="selectSymptom(this)">EMS(電気的筋肉刺激装置)トレーニング</button>
-            <button type="button" onclick="selectSymptom(this)">健康保険の施術</button>
-            <button type="button" onclick="selectSymptom(this)">その他</button>
-        </div>
-
-        <label for="date1">第1希望日</label>
-        <input type="datetime-local" id="date1">
-
-        <label for="date2">第2希望日</label>
-        <input type="datetime-local" id="date2">
-
-        <label for="date3">第3希望日</label>
-        <input type="datetime-local" id="date3">
+        <label for="date1">お誕生日※必須</label>
+        <input type="datetime-local" id="date1" placeholder="タップして日時を入力">
 
         <label for="message">メッセージ（質問等お気軽にご記入ください）</label>
         <textarea id="message" rows="4" placeholder="メッセージを入力してください"></textarea>
@@ -134,7 +106,7 @@
         // LIFF初期化
         document.addEventListener('DOMContentLoaded', function() {
             liff.init({
-                liffId: '2005254357-zKma9BZk' // ここにあなたのLIFF IDを入力
+                liffId: '2004727608-aZejr9x5' // ここにあなたのLIFF IDを入力
             }).then(() => {
                 // LIFF初期化成功時の処理
                 console.log('LIFF初期化成功');
@@ -181,7 +153,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `予約が送信されました:\n名前: ${formData.name}\n電話番号: ${formData.phone}\n訪問回数: ${formData.visitCount}\n症状: ${formData.symptoms.join(', ')}\n第1希望日: ${formData.dates[0]}\n第2希望日: ${formData.dates[1]}\n第3希望日: ${formData.dates[2]}\nメッセージ: ${formData.message}`
+                text: `占い\nお名前：${formData.name}\n電話番号：${formData.phone}\n訪問回数：${formData.visitCount}\n症状：${formData.symptoms.join(', ')}\n希望日時：\n ${formData.dates[0]}\n${formData.dates[1]}\n${formData.dates[2]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 // LIFFウィンドウを閉じる
                 liff.closeWindow();
