--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `占い\nお名前：${formData.name}\n電話番号：${formData.phone}\n訪問回数：${formData.visitCount}\n症状：${formData.symptoms.join(', ')}\n希望日時：\n ${formData.dates[0]}\n${formData.dates[1]}\n${formData.dates[2]}\nメッセージ：${formData.message}`
+                text: `占い\nお名前：${formData.name}\nお誕生日：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 // LIFFウィンドウを閉じる
                 liff.closeWindow();
