--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>予約フォーム</h1>
+        <h1>占いフォーム</h1>
         <label for="name">お客様名※必須</label>
         <input type="text" id="name" placeholder="お名前を入力してください">
 
