--- a/index.html
+++ b/index.html
@@ -135,18 +135,12 @@
 
         function submitForm() {
             const name = document.getElementById('name').value;
-            const phone = document.getElementById('phone').value;
             const date1 = formatDate(document.getElementById('date1').value);
-            const date2 = formatDate(document.getElementById('date2').value);
-            const date3 = formatDate(document.getElementById('date3').value);
             const message = document.getElementById('message').value;
 
             const formData = {
                 name,
-                phone,
-                visitCount,
-                symptoms,
-                dates: [date1, date2, date3],
+                dates: [date1],
                 message
             };
 
