--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 
         <label>どちらを占いますか？※必須</label>
         <div class="visit-buttons">
-            <button type="button" id="firstVisit" onclick="selectVisit(this)">マヤ暦</button>
-            <button type="button" id="repeatVisit" onclick="selectVisit(this)">数秘術</button>
+            <button type="button" id="firstVisit" onclick="selectVisit(this)">マヤ暦占い</button>
+            <button type="button" id="repeatVisit" onclick="selectVisit(this)">数秘術占い</button>
         </div>
 
         <label for="date1">お誕生日※必須</label>
