--- a/index.html
+++ b/index.html
@@ -139,6 +139,12 @@
             }
         }
 
+                function confirmSubmit() {
+            if (window.confirm('キャンセルはしないでください。承諾しますか？')) {
+                submitForm();
+            }
+        }
+
         function submitForm() {
             const name = document.getElementById('name').value;
             const date1 = formatDate(document.getElementById('date1').value);
