--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>占いフォーム</title>
+    <title>予約フォーム</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             background-color: #f7f7f7;
             display: flex;
             justify-content: center;
-            align-items: flex-start;
+            align-items: center;
             height: 100vh;
             margin: 0;
-            padding-top: 20px; /* ページのトップに空白を作る */
         }
         .container {
             background-color: #fff;
@@ -56,8 +55,6 @@
             background-color: #f7f7f7;
             cursor: pointer;
             box-sizing: border-box;
-            text-align: center;
-            white-space: nowrap;
         }
         .visit-buttons button.active, .symptoms button.active {
             background-color: #444;
@@ -85,23 +82,45 @@
 </head>
 <body>
     <div class="container">
-        <h1>占いフォーム</h1>
-        <label for="name">お客様名※必須</label>
+        <h1>予約フォーム</h1>
+        <label for="name">お客様名（カタカナ）</label>
         <input type="text" id="name" placeholder="お名前を入力してください">
 
-        <label>どちらを占いますか？※必須</label>
+        <label for="phone">電話番号</label>
+        <input type="tel" id="phone" placeholder="電話番号を入力してください">
+
+        <label>ご来店回数</label>
         <div class="visit-buttons">
-            <button type="button" id="firstVisit" onclick="selectVisit(this)">マヤ暦占い</button>
-            <button type="button" id="repeatVisit" onclick="selectVisit(this)">数秘術占い</button>
+            <button type="button" id="firstVisit" onclick="selectVisit(this)">初めて</button>
+            <button type="button" id="repeatVisit" onclick="selectVisit(this)">2回目以降</button>
         </div>
 
-        <label for="date1">お誕生日※必須</label>
-        <input type="datetime-local" id="date1" placeholder="タップして日時を入力">
+        <label>症状</label>
+        <div class="symptoms">
+            <button type="button" onclick="selectSymptom(this)">頭痛・偏頭痛</button>
+            <button type="button" onclick="selectSymptom(this)">交通事故施術</button>
+            <button type="button" onclick="selectSymptom(this)">肩こり・腕のしびれ</button>
+            <button type="button" onclick="selectSymptom(this)">臀部・下肢の痛みや痒れ</button>
+            <button type="button" onclick="selectSymptom(this)">ぎっくり腰・慢性腰痛</button>
+            <button type="button" onclick="selectSymptom(this)">寝違い・むち打ち等首の症状</button>
+            <button type="button" onclick="selectSymptom(this)">EMS(電気的筋肉刺激装置)トレーニング</button>
+            <button type="button" onclick="selectSymptom(this)">健康保険の施術</button>
+            <button type="button" onclick="selectSymptom(this)">その他</button>
+        </div>
+
+        <label for="date1">第1希望日</label>
+        <input type="datetime-local" id="date1">
+
+        <label for="date2">第2希望日</label>
+        <input type="datetime-local" id="date2">
+
+        <label for="date3">第3希望日</label>
+        <input type="datetime-local" id="date3">
 
         <label for="message">メッセージ（質問等お気軽にご記入ください）</label>
         <textarea id="message" rows="4" placeholder="メッセージを入力してください"></textarea>
 
-        <button class="submit-button" onclick="submitForm()">占い情報送信</button>
+        <button class="submit-button" onclick="submitForm()">予約を行う</button>
     </div>
 
     <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
@@ -139,47 +158,33 @@
             }
         }
 
-                function confirmSubmit() {
-            if (window.confirm('キャンセルはしないでください。承諾しますか？')) {
-                submitForm();
-            }
-        }
+function submitForm() {
+    const name = document.getElementById('name').value;
+    const phone = document.getElementById('phone').value;
+    const date1 = document.getElementById('date1').value;
+    const date2 = document.getElementById('date2').value;
+    const date3 = document.getElementById('date3').value;
+    const message = document.getElementById('message').value;
 
-        function submitForm() {
-            const name = document.getElementById('name').value;
-            const date1 = formatDate(document.getElementById('date1').value);
-            const message = document.getElementById('message').value;
+    const formData = {
+        name,
+        phone,
+        visitCount,
+        symptoms,
+        dates: [date1, date2, date3],
+        message
+    };
 
-            const formData = {
-                name,
-                visitCount,
-                dates: [date1],
-                message
-            };
-
-            // LINEトークにメッセージを送信
-            liff.sendMessages([{
-                type: 'text',
-                text: `【占いフォーム】\nお名前：${formData.name}\n占い：${formData.visitCount}\nお誕生日：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
-            }]).then(() => {
-                // LIFFウィンドウを閉じる
-                liff.closeWindow();
-            }).catch((err) => {
-                // 失敗時の処理（エラーメッセージを表示しない）
-                console.error('メッセージの送信に失敗しました', err);
-            });
-        }
-
-        function formatDate(datetime) {
-            if (!datetime) return '';
-            const date = new Date(datetime);
-            const year = date.getFullYear();
-            const month = ('0' + (date.getMonth() + 1)).slice(-2);
-            const day = ('0' + date.getDate()).slice(-2);
-            const hours = ('0' + date.getHours()).slice(-2);
-            const minutes = ('0' + date.getMinutes()).slice(-2);
-            return `${year}年${month}月${day}日 ${hours}:${minutes}`;
-        }
+    // LINEトークにメッセージを送信
+    liff.sendMessages([{
+        type: 'text',
+        text: `予約が送信されました:\n名前: ${formData.name}\n電話番号: ${formData.phone}\n訪問回数: ${formData.visitCount}\n症状: ${formData.symptoms.join(', ')}\n第1希望日: ${formData.dates[0]}\n第2希望日: ${formData.dates[1]}\n第3希望日: ${formData.dates[2]}\nメッセージ: ${formData.message}`
+    }]).then(() => {
+        alert('予約が送信されました: ' + JSON.stringify(formData));
+    }).catch((err) => {
+        console.error('メッセージの送信に失敗しました', err);
+    });
+}
     </script>
 </body>
 </html>
