--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
             text: `予約が送信されました:\n名前: ${formData.name}\n電話番号: ${formData.phone}\n訪問回数: ${formData.visitCount}\n症状: ${formData.symptoms.join(', ')}\n第1希望日: ${formData.dates[0]}\n第2希望日: ${formData.dates[1]}\n第3希望日: ${formData.dates[2]}\nメッセージ: ${formData.message}`
         }]).then(() => {
             alert('予約が送信されました: ' + JSON.stringify(formData));
+            liff.closeWindow();
         }).catch((err) => {
             console.error('メッセージの送信に失敗しました', err);
         });
