--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 message
             };
 
-    var userConfirmed = confirm('当日キャンセルはしないでください。キャンセル料発生いたします。: ' + JSON.stringify(formData));
+    var userConfirmed = confirm('当日キャンセルはしないでください。キャンセル料発生いたします。;
     if (userConfirmed) {
         // LINEトークにメッセージを送信
         liff.sendMessages([{
