--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
         </div>
 
         <label for="date1">第1希望日※必須</label>
-        <input type="datetime-local" id="date1" placeholder="タップして日時を入力">
+        <input type="datetime-local" id="date1" step="1800" placeholder="タップして日時を入力">
 
         <label for="date2">第2希望日</label>
-        <input type="datetime-local" id="date2" placeholder="タップして日時を入力">
+        <input type="datetime-local" id="date2" step="1800" placeholder="タップして日時を入力">
 
         <label for="date3">第3希望日</label>
-        <input type="datetime-local" id="date3" placeholder="タップして日時を入力">
+        <input type="datetime-local" id="date3" step="1800" placeholder="タップして日時を入力">
 
         <label for="message">メッセージ（質問等お気軽にご記入ください）</label>
         <textarea id="message" rows="4" placeholder="メッセージを入力してください"></textarea>
