--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
     <script>
         let visitCount = '';
-        let symptoms = [];
+        let selectedSymptom = '';
 
         // LIFF初期化
         document.addEventListener('DOMContentLoaded', function() {
@@ -152,13 +152,12 @@
         }
 
         function selectSymptom(element) {
-            element.classList.toggle('active');
-            const symptom = element.innerText;
-            if (symptoms.includes(symptom)) {
-                symptoms = symptoms.filter(s => s !== symptom);
-            } else {
-                symptoms.push(symptom);
-            }
+            const allSymptoms = document.querySelectorAll('.symptoms button');
+            allSymptoms.forEach(symptom => {
+                symptom.classList.remove('active');
+            });
+            element.classList.add('active');
+            selectedSymptom = element.innerText;
         }
 
         function submitForm() {
@@ -173,7 +172,7 @@
                 name,
                 phone,
                 visitCount,
-                symptoms,
+                selectedSymptom,
                 dates: [date1, date2, date3],
                 message
             };
@@ -181,7 +180,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\n訪問回数：${formData.visitCount}\n症状：${formData.symptoms.join(', ')}\n希望日時：\n ${formData.dates[0]}\n${formData.dates[1]}\n${formData.dates[2]}\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\n訪問回数：${formData.visitCount}\n症状：${formData.selectedSymptom}\n希望日時：\n ${formData.dates[0]}\n${formData.dates[1]}\n${formData.dates[2]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。 ' );
                 // LIFFウィンドウを閉じる
