--- a/index.html
+++ b/index.html
@@ -92,25 +92,6 @@
         <label for="phone">電話番号※必須</label>
         <input type="tel" id="phone" placeholder="電話番号を入力してください">
 
-        <label>ご来店回数※必須</label>
-        <div class="visit-buttons">
-            <button type="button" id="firstVisit" onclick="selectVisit(this)">初めて</button>
-            <button type="button" id="repeatVisit" onclick="selectVisit(this)">2回目以降</button>
-        </div>
-
-        <label>症状※必須</label>
-        <div class="symptoms">
-            <button type="button" onclick="selectSymptom(this)">頭痛・偏頭痛</button>
-            <button type="button" onclick="selectSymptom(this)">交通事故施術</button>
-            <button type="button" onclick="selectSymptom(this)">肩こり・腕のしびれ</button>
-            <button type="button" onclick="selectSymptom(this)">臀部・下肢の痛みや痒れ</button>
-            <button type="button" onclick="selectSymptom(this)">ぎっくり腰・慢性腰痛</button>
-            <button type="button" onclick="selectSymptom(this)">寝違い・むち打ち等首の症状</button>
-            <button type="button" onclick="selectSymptom(this)">EMS(電気的筋肉刺激装置)トレーニング</button>
-            <button type="button" onclick="selectSymptom(this)">健康保険の施術</button>
-            <button type="button" onclick="selectSymptom(this)">その他</button>
-        </div>
-
         <label for="date1">第1希望日※必須</label>
         <input type="datetime-local" id="date1" step="1800" placeholder="タップして日時を入力">
 
@@ -119,6 +100,25 @@
 
         <label for="date3">第3希望日</label>
         <input type="datetime-local" id="date3" step="1800" placeholder="タップして日時を入力">
+
+        <label>新規orリピーター※必須</label>
+        <div class="visit-buttons">
+            <button type="button" id="firstVisit" onclick="selectVisit(this)">初めて</button>
+            <button type="button" id="repeatVisit" onclick="selectVisit(this)">2回目以降</button>
+        </div>
+
+        <label>メニュー※必須</label>
+        <div class="symptoms">
+            <button type="button" onclick="selectSymptom(this)">全身デトックスリンパ100分</button>
+            <button type="button" onclick="selectSymptom(this)">全身デトックスリンパ120分</button>
+            <button type="button" onclick="selectSymptom(this)">ブライダルベーシック70分</button>
+            <button type="button" onclick="selectSymptom(this)">首・肩こりコース30分</button>
+            <button type="button" onclick="selectSymptom(this)">セレクトデトックスリンパ70分</button>
+            <button type="button" onclick="selectSymptom(this)">半身デトックスリンパ70分</button>
+            <button type="button" onclick="selectSymptom(this)">ブライダルスタンダード90分</button>
+            <button type="button" onclick="selectSymptom(this)">ブライダルスペシャル120分</button>
+            <button type="button" onclick="selectSymptom(this)">よもぎ蒸し30分</button>
+        </div>
 
         <label for="message">メッセージ（質問等お気軽にご記入ください）</label>
         <textarea id="message" rows="4" placeholder="メッセージを入力してください"></textarea>
@@ -134,7 +134,7 @@
         // LIFF初期化
         document.addEventListener('DOMContentLoaded', function() {
             liff.init({
-                liffId: '2005254357-zKma9BZk' // ここにあなたのLIFF IDを入力
+                liffId: '' // ここにあなたのLIFF IDを入力
             }).then(() => {
                 // LIFF初期化成功時の処理
                 console.log('LIFF初期化成功');
@@ -180,7 +180,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\n訪問回数：${formData.visitCount}\n症状：${formData.selectedSymptom}\n希望日時：\n ${formData.dates[0]}\n${formData.dates[1]}\n${formData.dates[2]}\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\n希望日時：\n ${formData.dates[0]}\n${formData.dates[1]}\n${formData.dates[2]}\n新規orリピーター：${formData.visitCount}\nメニュー：${formData.selectedSymptom}\nメッセージ：${formData.message}`
             }]).then(() => {
                 alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。 ' );
                 // LIFFウィンドウを閉じる
